OVerflow fixed again

--- a/css/globals.css
+++ b/css/globals.css
@@ -7,12 +7,15 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  overflow-x: hidden;
 }
 
 :root {
   --green: #95c11e;
   --light-green: #b3e824;
+}
+
+html {
+  overflow-x: hidden;
 }
 
 body {
